feat: request account id on create and delete mapping ops
